--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "@types/lodash": "^4.17.13",
     "@types/react-lottie": "^1.2.10",
+    "i18n-iso-countries": "^7.12.0",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.80.4",
     "typed.js": "^2.1.0",
-    "uuid": "^11.0.1"
+    "uuid": "^11.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/redux-persist": "^4.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
