--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/lodash": "^4.17.13",
     "@types/react-lottie": "^1.2.10",
