--- a/package.json
+++ b/package.json
@@ -17,14 +17,21 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/lodash": "^4.17.13",
     "@types/react-lottie": "^1.2.10",
+    "date-fns": "^4.1.0",
     "i18n-iso-countries": "^7.12.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
+    "millify": "^6.1.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-compare": "^3.2.2",
     "react-icons": "^5.3.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-sticky-box": "^2.0.5",
+    "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.80.4",
     "typed.js": "^2.1.0",
@@ -36,6 +43,7 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/redux-persist": "^4.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
