--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/lodash": "^4.17.13",
     "@types/react-lottie": "^1.2.10",
     "date-fns": "^4.1.0",
+    "html-react-parser": "^5.2.0",
     "i18n-iso-countries": "^7.12.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
@@ -28,6 +29,7 @@
     "react-fast-compare": "^3.2.2",
     "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-sticky-box": "^2.0.5",
