--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
     "sass": "^1.80.4",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.15",
     "typed.js": "^2.1.0",
     "uuid": "^11.0.1",
