--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@types/lodash": "^4.17.13",
     "@types/react-lottie": "^1.2.10",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "html-react-parser": "^5.2.0",
     "i18n-iso-countries": "^7.12.0",
