--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/lodash": "^4.17.13",
     "@types/react-lottie": "^1.2.10",
